objects/Announcement__c.object
<CustomObject>
    <fields>
        <fullName>Deployed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deployed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Max_Count__c</fullName>
        <label>Max Count</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Message_Text__c</fullName>
        <label>Text</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Template_Type__c</fullName>
        <label>Message Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Html</fullName>
                    <default>true</default>
                    <label>Html</label>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Announcement</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Announcement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Announcements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All_Announcements</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Announcements</label>
    </listViews>
</CustomObject>